code/java/Symbology/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Symbology client library for Java

[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/symbology)](https://search.maven.org/artifact/com.factset.sdk/symbology)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The FactSet Symbology API provides symbol resolution services, allowing clients to translate market identifiers into various symbology
types. various market symbology types such as, FactSet Permanent Identifiers, CUSIP, ISIN, 
SEDOL, Tickers, and Bloomberg FIGIs. 

Factset's Symbology API sits at the center of its hub-and-spoke data model, enabling you to quickly 
harmonize the expanding catalog of Content APIs. Translate market IDs into CUSIP, SEDOL, ISIN, Tickers as a point in time or for the entire
history of the requested id allowing Data Management workflows to normalize ids over time. Additionally, the Symbology API provides 
translation of market ids into Bloomberg FIGI.


This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.0
- Package version: 0.8.9
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.0.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>symbology</artifactId>
  <version>0.8.9</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.0.0"
    implementation "com.factset.sdk:symbology:0.8.9"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

```java
import com.factset.sdk.Symbology.*;
import com.factset.sdk.Symbology.auth.*;
import com.factset.sdk.Symbology.models.*;
import com.factset.sdk.Symbology.api.BloombergFigiApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class BloombergFigiApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        BloombergFigiApi apiInstance = new BloombergFigiApi(defaultClient);
        BloombergTranslationRequest bloombergTranslationRequest = new BloombergTranslationRequest(); // BloombergTranslationRequest | Request Body for Bloomberg FIGIs.
        try {
            BloombergTranslationResponse result = apiInstance.batchTranslateBloomberg(bloombergTranslationRequest);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling BloombergFigiApi#batchTranslateBloomberg");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.Symbology.*;
import com.factset.sdk.Symbology.api.BloombergFigiApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

BloombergFigiApi apiInstance = new BloombergFigiApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.Symbology.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BloombergFigiApi* | [**batchTranslateBloomberg**](docs/BloombergFigiApi.md#batchTranslateBloomberg) | **POST** /symbology/v1/bloomberg | Translate market security symbols into Bloomberg Identifiers.
*BloombergFigiApi* | [**translateBloomberg**](docs/BloombergFigiApi.md#translateBloomberg) | **GET** /symbology/v1/bloomberg | Translate FactSet symbols into Bloomberg Identifiers.
*CusipApi* | [**batchCusipHistory**](docs/CusipApi.md#batchCusipHistory) | **POST** /symbology/v1/cusip-history | Retrieve the full history of CUSIP changes for the requested ID(s).
*CusipApi* | [**batchTranslateCusips**](docs/CusipApi.md#batchTranslateCusips) | **POST** /symbology/v1/cusip | Translate market security symbols into CUSIP.
*CusipApi* | [**cusipHistory**](docs/CusipApi.md#cusipHistory) | **GET** /symbology/v1/cusip-history | Retrieve the full history of CUSIP changes for the requested ID(s).
*CusipApi* | [**translateCusip**](docs/CusipApi.md#translateCusip) | **GET** /symbology/v1/cusip | Translate market security symbols into CUSIP.
*FactSetApi* | [**batchTranslateFactset**](docs/FactSetApi.md#batchTranslateFactset) | **POST** /symbology/v1/factset | Translate market security symbols into FactSet Permanent Identifiers.
*FactSetApi* | [**translateFactset**](docs/FactSetApi.md#translateFactset) | **GET** /symbology/v1/factset | Translate market security symbols into FactSet Permanent Identifiers.
*IsinApi* | [**batchIsinHistory**](docs/IsinApi.md#batchIsinHistory) | **POST** /symbology/v1/isin-history | Retrieve the full history or as of a specific date of ISIN changes for a requested ID.
*IsinApi* | [**batchTranslateIsin**](docs/IsinApi.md#batchTranslateIsin) | **POST** /symbology/v1/isin | Translate market security symbols into ISIN.
*IsinApi* | [**isinHistory**](docs/IsinApi.md#isinHistory) | **GET** /symbology/v1/isin-history | Retrieve the full history or as of a specific date of ISIN changes for the requested ID(s).
*IsinApi* | [**translateIsin**](docs/IsinApi.md#translateIsin) | **GET** /symbology/v1/isin | Translate market security symbols into ISIN.
*SedolApi* | [**batchSedolHistory**](docs/SedolApi.md#batchSedolHistory) | **POST** /symbology/v1/sedol-history | Retrieve the full history SEDOL changes for a requested ID.
*SedolApi* | [**batchTranslateSedol**](docs/SedolApi.md#batchTranslateSedol) | **POST** /symbology/v1/sedol | Translate market security symbols into SEDOL.
*SedolApi* | [**sedolHistory**](docs/SedolApi.md#sedolHistory) | **GET** /symbology/v1/sedol-history | Retrieve the full history of SEDOL changes for the requested ID(s).
*SedolApi* | [**translateSedol**](docs/SedolApi.md#translateSedol) | **GET** /symbology/v1/sedol | Translate market security symbols into SEDOL.
*TickerApi* | [**batchTickerHistory**](docs/TickerApi.md#batchTickerHistory) | **POST** /symbology/v1/ticker-history | Returns the full history of Ticker-Exchange or Ticker-Region changes for a requested security.
*TickerApi* | [**batchTranslateTicker**](docs/TickerApi.md#batchTranslateTicker) | **POST** /symbology/v1/ticker | Returns the Ticker-Exchange or Ticker-Region for a given security.
*TickerApi* | [**tickerHistory**](docs/TickerApi.md#tickerHistory) | **GET** /symbology/v1/ticker-history | Returns the full history of Ticker-Exchange or Ticker-Region changes for a requested security.
*TickerApi* | [**translateTicker**](docs/TickerApi.md#translateTicker) | **GET** /symbology/v1/ticker | Returns the Ticker-Exchange or Ticker-Region for a given security.


## Documentation for Models

 - [BloombergTranslation](docs/BloombergTranslation.md)
 - [BloombergTranslationRequest](docs/BloombergTranslationRequest.md)
 - [BloombergTranslationResponse](docs/BloombergTranslationResponse.md)
 - [CusipHistoryTranslation](docs/CusipHistoryTranslation.md)
 - [CusipHistoryTranslationRequest](docs/CusipHistoryTranslationRequest.md)
 - [CusipHistoryTranslationResponse](docs/CusipHistoryTranslationResponse.md)
 - [CusipTranslation](docs/CusipTranslation.md)
 - [CusipTranslationRequest](docs/CusipTranslationRequest.md)
 - [CusipTranslationResponse](docs/CusipTranslationResponse.md)
 - [ErrorResponse](docs/ErrorResponse.md)
 - [ErrorResponseSubErrors](docs/ErrorResponseSubErrors.md)
 - [FactsetTranslation](docs/FactsetTranslation.md)
 - [FactsetTranslationRequest](docs/FactsetTranslationRequest.md)
 - [FactsetTranslationResponse](docs/FactsetTranslationResponse.md)
 - [IsinHistoryTranslation](docs/IsinHistoryTranslation.md)
 - [IsinHistoryTranslationRequest](docs/IsinHistoryTranslationRequest.md)
 - [IsinHistoryTranslationResponse](docs/IsinHistoryTranslationResponse.md)
 - [IsinTranslation](docs/IsinTranslation.md)
 - [IsinTranslationRequest](docs/IsinTranslationRequest.md)
 - [IsinTranslationResponse](docs/IsinTranslationResponse.md)
 - [SedolHistoryTranslation](docs/SedolHistoryTranslation.md)
 - [SedolHistoryTranslationRequest](docs/SedolHistoryTranslationRequest.md)
 - [SedolHistoryTranslationResponse](docs/SedolHistoryTranslationResponse.md)
 - [SedolTranslation](docs/SedolTranslation.md)
 - [SedolTranslationRequest](docs/SedolTranslationRequest.md)
 - [SedolTranslationResponse](docs/SedolTranslationResponse.md)
 - [TickerHistoryTranslation](docs/TickerHistoryTranslation.md)
 - [TickerHistoryTranslationRequest](docs/TickerHistoryTranslationRequest.md)
 - [TickerHistoryTranslationResponse](docs/TickerHistoryTranslationResponse.md)
 - [TickerTranslation](docs/TickerTranslation.md)
 - [TickerTranslationRequest](docs/TickerTranslationRequest.md)
 - [TickerTranslationResponse](docs/TickerTranslationResponse.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
